--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "obsidian-simple-mention",
-  "name": "Simple Mention",
+  "id": "obsidian-simple-mention-ng",
+  "name": "Simple Mention NG",
   "version": "0.1.0",
   "minAppVersion": "0.15.4",
   "description": "Get highlighted mentions and mention suggestions. Find all occurrences of a mention",
-  "author": "der-tobi",
-  "authorUrl": "https://github.com/der-tobi",
+  "author": "Ashley Davis <ashley@airsi.de>",
+  "authorUrl": "https://github.com/dualmoon",
   "isDesktopOnly": true
 }
