--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "obsidian-simple-mention",
-	"version": "1.0.1",
+	"name": "obsidian-simple-mention-ng",
+	"version": "1.0.2",
 	"description": "Get highlighted mentions and mention suggestions. Find all occurrences of a mention",
 	"main": "main.js",
 	"scripts": {
