--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "id": "obsidian-simple-mention",
+  "id": "obsidian-simple-mention-ng",
   "name": "Simple Mention NG",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "minAppVersion": "0.15.4",
   "description": "Get highlighted mentions and mention suggestions. Find all occurrences of a mention",
   "author": "dualmoon",
